syntax = "proto3";

package MirMobile;

import "info_common.proto";

message CLIENT_GAME_CHARACTER_ACHIEVEMENT_CLEAR_REWARD {
    uint64 user_uid = 1;
    repeated uint32 request_achievement_id_list = 2;
}

message GAME_CLIENT_SYNC_REWARD_ACHIVEMENT {
    uint32 achievement_id = 1;
    repeated _cost_info cost_info_list = 2;
    repeated _character_inven_item reward_item_list = 3;
}

message GAME_CLIENT_REWARD_ACHIEVEMENT_LIST_RESULT {
    bool success_all = 1;
    repeated uint32 achievement_id_list = 2;
    uint32 error_id = 3;
    uint32 error_reason_achievement_id = 4;
}

message GAME_CLIENT_SYNC_PLAY_DATA {
    repeated _character_play_data_info play_data_list = 1;
}
