syntax = "proto3";

package MirMobile;

import "info_common.proto";

message CLIENT_GAME_AUTH {
    uint64 account_uid = 1;
    string strID = 2;
    string strSDK = 3;
    string auth_key = 4;
}

message GAME_CLIENT_AUTH {
    int32 result = 1;
    int32 cash = 2;
    int32 time_region = 3;
}

message CLIENT_GAME_TIME {
    
}

message GAME_CLIENT_TIME {
    int32 time = 1;
    int64 time_ms = 2;
    int64 time_zone = 3;
}

message CLIENT_LOBBY_CHARACTER_LIST_ALL {
    uint64 account_uid = 1;
}

message CLIENT_LOBBY_CHARACTER_LIST_ALL_GLOBAL {
    uint64 account_uid = 1;
}

message LOBBY_CLIENT_CHARACTER_LIST_ALL {
    repeated _characterInfo_login characterInfo_login = 1;
    int64 server_current_time = 2;
    int32 voice_download_state = 3;
    string wemix_user_address = 4;
}

message LOBBY_CLIENT_CHARACTER_LIST_ALL_GLOBAL {
    repeated _characterInfo_login_global characterInfo_login = 1;
    int64 server_current_time = 2;
    int32 voice_download_state = 3;
    string wemix_user_address = 4;
}

message MACRO_LUA_CHARACTER_INFO {
    _characterInfo_login characterInfo_login = 1;
    int64 server_current_time = 2;
}

message MACRO_LUA_COMMAND {
    string content = 1;
}

message MACRO_LUA_START {
    string init_action = 1;
    repeated string parameters = 2;
}

message CLIENT_LOBBY_CREATE_CHARACTER {
    uint64 account_uid = 1;
    int32 classId = 2;
    string nickName = 3;
    int32 hair_color_index = 4;
    int32 clothes_color_index = 5;
    repeated customize_info customize_list = 6;
    _costume_info costume_info = 7;
}

message LOBBY_CLIENT_CREATE_CHARACTER {
    int32 result = 1;
    int32 classId = 2;
    string nickName = 3;
    int32 stageindex = 4;
    int32 combatpoint = 5;
    int32 costume_id = 6;
    int32 hair_color_index = 7;
    int32 clothes_color_index = 8;
    uint64 character_uid = 9;
    repeated customize_info customize_list = 10;
    _costume_info costume_info = 11;
}

message CLIENT_LOBBY_CHARACTER_DELETE {
    uint64 account_uid = 1;
    uint64 character_uid = 2;
}

message LOBBY_CLIENT_CHARACTER_DELETE {
    uint64 character_uid = 1;
    int64 del_time = 2;
}

message LOBBY_WORLD_CHARACTER_DELETE_CHECK {
    uint64 account_uid = 1;
    uint64 character_uid = 2;
}

message WORLD_LOBBY_CHARACTER_DELETE_CHECK {
    int32 result = 1;
    uint64 account_uid = 2;
    uint64 character_uid = 3;
}

message CLIENT_LOBBY_SELECT_CHARACTER {
    uint64 account_uid = 1;
    int32 classId = 2;
    uint64 character_uid = 3;
    int32 store_type = 4;
}

message WORLD_CLIENT_SELECT_CHARACTER {
    string gameserver_ip = 1;
    int32 gameserver_port = 2;
    uint64 zone_unique = 3;
    uint64 uid_um = 4;
    string auth_key = 5;
}

message WORLD_GATEWAY_CHARACTER_AUTH_KEY {
    uint64 character_uid = 1;
    string auth_key = 2;
}

message CLIENT_LOBBY_CHARACTER_DELETE_CANCEL {
    uint64 account_uid = 1;
    uint64 character_uid = 2;
}

message LOBBY_CLIENT_CHARACTER_DELETE_CANCEL {
    uint64 character_uid = 1;
}

message CLIENT_LOBBY_CHARACTER_CHANGE_CUSTOMIZE {
    uint64 character_uid = 1;
    repeated customize_info customize_list = 2;
}

message LOBBY_CLIENT_CHARACTER_CHANGE_CUSTOMIZE {
    int32 result = 1;
    uint64 character_uid = 2;
}

message CLIENT_GAME_CHARACTER_EQUIP {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_EQUIP {
    repeated _character_equip_item character_equip_items = 1;
}

message CLIENT_GAME_CHARACTER_INVEN {
    uint64 uid = 1;
}

message CLIENT_GAME_CHARACTER_MASTERY_DATA {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_MASTERY_DATA {
    repeated _character_mastery_slot mastery_slot_list = 1;
    uint32 level_limit_grade = 2;
}

message _packet_s_characterInven {
    repeated _character_inven_item character_inven_items = 1;
}

message GAME_CLIENT_CHARACTER_INVEN_START {
    int32 maxInvenCount = 1;
    int32 itemCount = 2;
    int32 useInvenCount = 3;
}

message GAME_CLIENT_CHARACTER_INVEN_DATA {
    repeated _character_inven_item character_inven_items = 1;
}

message GAME_CLIENT_CHARACTER_INVEN_END {
    
}

message CLIENT_GAME_CHARACTER_QUEST {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_QUEST {
    repeated _character_quest questinfos = 1;
}

message CLIENT_GAME_CHARACTER_SUB_QUEST {
    uint64 uid = 1;
}

message _repeat_quest_info {
    int32 repeatquest_index = 1;
    int32 clear_count = 2;
    int32 clear_week_count = 3;
}

message _request_quest_info {
    int32 quest_index = 1;
    int32 state = 2;
    int32 seq = 3;
}

message _cooperation_quest_info {
    int32 quest_index = 1;
    int32 state = 2;
    int32 clear_count = 3;
    int32 week_clear_count = 4;
    uint32 update_time = 5;
}

message GAME_CLIENT_CHARACTER_SUB_QUEST {
    repeated int32 end_subquest_indexs = 1;
    repeated int32 subquest_indexs = 2;
    repeated _character_quest active_questinfos = 3;
    repeated _repeat_quest_info repeat_quest_infos = 4;
    repeated _request_quest_info request_quest_infos = 5;
    repeated int32 end_reqquest_indexs = 6;
    repeated _cooperation_quest_info cooperation_quest_infos = 7;
    repeated int32 end_coopquest_indexs = 8;
}

message GAME_CLIENT_CHARACTER_SUB_REPEAT_QUEST {
    repeated _repeat_quest_info repeat_quest_infos = 1;
    repeated int32 subquest_indexs = 2;
    repeated _character_quest active_questinfos = 3;
    int32 reset_period = 4;
}

message CLIENT_GAME_QUEST_RELATION_DATA {
    uint64 uid = 1;
}

message _relation_quest_info {
    int32 index = 1;
    int32 state = 2;
    int32 count = 3;
    uint32 updatetime = 4;
}

message _relation_reward_quest_info {
    int32 episode_index = 1;
}

message GAME_CLIENT_QUEST_RELATION_DATA {
    repeated _relation_quest_info relation_quest_infos = 1;
    repeated int32 end_releation_indexs = 2;
    repeated _relation_reward_quest_info relation_reward_quest_infos = 3;
}

message CLIENT_GAME_GUILD_DAILY_MISSION_DATA {
    uint64 uid = 1;
}

message _guild_daily_mission_info {
    int32 index = 1;
    int32 state = 2;
    int32 count = 3;
    int32 clearcnt = 4;
}

message GAME_CLIENT_GUILD_DAILY_MISSION_DATA {
    repeated _guild_daily_mission_info guild_daily_mission_infos = 1;
}

message CLIENT_GAME_CHARACTER_SKILL {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_SKILL {
    repeated _character_skill skillinfos = 1;
}

message CLIENT_GAME_CHARACTER_SKILL_DECK_SLOT_DATA {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_SKILL_DECK_SLOT_DATA {
    repeated _character_skill_deck deck_list = 1;
    int32 current_deck_id = 2;
}

message CLIENT_GAME_CHARACTER_ENERGY_POINT_DATA {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_ENERGY_POINT_DATA {
    int32 energyPoint = 1;
}

message CLIENT_GAME_CHARACTER_ACHIEVEMENT_EXP_DATA {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_ACHIEVEMENT_EXP_DATA {
    uint64 uid = 1;
    uint64 achievement_exp = 2;
}

message CLIENT_GAME_CHARACTER_PLAY_DATA {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_PLAY_DATA {
    repeated _character_play_data_info character_play_data_list = 1;
}

message CLIENT_GAME_CHARACTER_ACHIEVEMENT_CLEAR_DATA {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_ACHIEVEMENT_CLEAR_DATA {
    repeated _character_achievement_complete_info character_achievement_complete_list = 1;
}

message CLIENT_GAME_QUEST_DAILY_DATA {
    uint64 uid = 1;
}

message GAME_CLIENT_QUEST_DAILY_DATA {
    _character_quest_daily_info daily_info = 1;
    repeated _character_quest_daily_list_info daily_list = 2;
    repeated _character_quest_daily_reward_list_info daily_reward_list = 3;
}

message GAME_CLIENT_CHARACTER_DAILY_HOMEWORK {
    repeated _character_quest questinfos = 1;
    int32 plusreward = 2;
    repeated int32 complete_plusreward = 3;
}

message CLIENT_GAME_COSTUME_LIST {
    
}

message GAME_CLIENT_COSTUME_LIST {
    repeated _costume_info costume_list = 1;
    repeated _equip_costume_info equip_costume_list = 2;
    repeated _costume_hide_info costume_hide_list = 3;
}

message CLIENT_GAME_LUXURY_COSTUME_LIST {
    
}

message GAME_CLIENT_LUXURY_COSTUME_LIST {
    repeated _equip_luxury_costume_info equip_list = 1;
    repeated _luxury_costume_hide_info hide_list = 2;
}

message CLIENT_GAME_LIST_COSTUME {
    uint64 uid = 1;
}

message GAME_CLIENT_LIST_COSTUME {
    int32 _equip_costume_id = 1;
    repeated _costume_info costume_infos = 2;
}

message CLIENT_GAME_VEHICLE_LIST {
    
}

message GAME_CLIENT_VEHICLE_LIST {
    int32 equip_vehicle_index = 1;
    repeated int32 vehicle_index_list = 2;
}

message CLIENT_GAME_TUTORIAL_CLEAR_LIST {
    uint64 uid = 1;
}

message GAME_CLIENT_TUTORIAL_CLEAR_LIST {
    repeated uint32 tutorial_group_index_list = 1;
}

message CLIENT_GAME_CHARACTER_MAP_WAYPOINT_DATA {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_MAP_WAYPOINT_DATA {
    repeated int32 map_waypoint_id_list = 1;
}

message CLIENT_GAME_CHARACTER_TREASURE_DATA {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_TREASURE_DATA {
    repeated _treasure_open_info treasure_open_list = 1;
}

message CLIENT_GAME_CHARACTER_HOLY_STUFF_DATA {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_HOLY_STUFF_DATA {
    repeated _holy_stuff_info holy_stuff_list = 1;
}

message CLIENT_GAME_LOGIN {
    uint64 uid = 1;
    int32 os_type = 2;
}

message GAME_CLIENT_LOGIN {
    int32 result = 1;
}

message LOGIN_WORLD_AUTH {
    uint64 account_uid = 1;
    uint32 socket_index = 2;
}

message WORLD_LOGIN_AUTH {
    uint64 account_uid = 1;
    uint32 socket_index = 2;
    uint32 error = 3;
}

message LOBBY_WORLD_SELECT_CHARACTER {
    uint64 account_uid = 1;
    uint64 character_uid = 2;
    int32 proxy_server_type = 3;
    int32 proxy_server_index = 4;
    uint32 proxy_connected_session_index = 5;
    string user_ip = 6;
    uint32 trans_server = 7;
    int32 store_type = 8;
    int32 classId = 9;
}

message WORLD_LOBBY_SELECT_CHARACTER {
    uint64 account_uid = 1;
    uint32 socket_index = 2;
    string gameserver_ip = 3;
    int32 gameserver_port = 4;
    uint64 zone_unique = 5;
    uint64 uid_um = 6;
    uint32 error = 7;
    uint32 user_count = 8;
}

message LOBBY_WORLD_FORCED_DISCONNECT_USER {
    uint64 user_uid = 1;
}

message _packet_world_game_forced_disconnect_user_session {
    uint64 user_uid = 1;
}

message _packet_game_world_forced_logout_user {
    uint64 user_uid = 1;
    bool init_auth_key = 2;
}

message GAME_WORLD_NEW_LOGOUT_USER {
    uint64 user_uid = 1;
    bool init_auth_key = 2;
    int32 reason = 3;
}

message WORLD_GAME_RELOGIN_READY {
    uint64 user_uid = 1;
    int32 proxy_server_type = 2;
    uint32 proxy_server_index = 3;
    uint32 proxy_connected_session_id = 4;
    string user_ip = 5;
}

message GAME_WORLD_RELOGIN_READY_RESULT {
    uint64 user_uid = 1;
}

message CLIENT_GAME_REQUEST_RECONNECT {
    uint64 reconnect_user_uid = 1;
    string auth_key = 2;
}

message _packet_game_world_request_reconnect {
    uint64 reconnect_user_uid = 1;
    int32 reconnect_session_index = 2;
}

message _packet_world_game_reconnect_result {
    uint64 reconnect_user_uid = 1;
    int32 reconnect_session_index = 2;
    int32 error_id = 3;
}

message GAME_CLIENT_RECONNECT_RESULT {
    uint64 reconnect_user_uid = 1;
    int32 error_id = 2;
}

message _packet_game_world_request_reconnect_complete {
    uint64 reconnect_user_uid = 1;
}

message _packet_world_game_reconnect_complete {
    uint64 reconnect_user_uid = 1;
}

message GAME_CLIENT_RECONNECT_COMPLETE {
    uint64 reconnect_user_uid = 1;
}

message GATEWAY_LOBBY_AUTH {
    uint64 account_uid = 1;
    string account_id = 2;
    uint32 proxy_server_index = 3;
    uint32 proxy_connected_session_id = 4;
    string user_ip = 5;
}

message LOBBY_GATEWAY_AUTH {
    uint32 result = 1;
    uint64 account_uid = 2;
    uint32 proxy_server_index = 3;
    uint32 proxy_connected_session_id = 4;
}

message LOBBY_WORLD_AUTH {
    uint64 account_uid = 1;
    int32 proxy_server_type = 2;
    uint32 proxy_server_index = 3;
    uint32 proxy_session_index = 4;
}

message WORLD_LOBBY_AUTH {
    uint32 result = 1;
    uint64 account_uid = 2;
    int32 proxy_server_type = 3;
    uint32 proxy_server_index = 4;
    uint32 proxy_session_index = 5;
    int32 os_type = 6;
    string auth_key = 7;
}

message WORLD_MANAGER_LOBBY_AUTH_RESULT {
    uint64 account_uid = 1;
}

message GATEWAY_LOBBY_DISCONNECT_LOGIN_USER {
    uint64 account_uid = 1;
    uint32 proxy_server_index = 2;
    uint32 proxy_server_session_index = 3;
}

message GATEWAY_WORLD_DISCONNECT_USER {
    uint64 user_uid = 1;
    bool close_reconnect = 2;
    string auth_key = 3;
}

message LOBBY_WORLD_DISCONNECT_LOGIN_USER {
    uint64 account_uid = 1;
}

message GATEWAY_WORLD_REQUEST_RECONNECT_USER {
    uint64 reconnect_user_uid = 1;
    int32 proxy_server_index = 2;
    int32 client_connected_session_index = 3;
    string auth_key = 4;
}

message WORLD_GAME_REQUEST_RECONNECT_USER {
    uint64 reconnect_user_uid = 1;
    int32 proxy_server_type = 2;
    int32 proxy_server_index = 3;
    int32 client_connected_session_index = 4;
}

message GAME_WORLD_RECONNECT_USER_RESULT {
    uint32 result = 1;
    uint64 reconnect_user_uid = 2;
    int32 proxy_server_type = 3;
    int32 proxy_server_index = 4;
    int32 client_connected_session_index = 5;
}

message WORLD_GATEWAY_RECONNECT_USER_RESULT {
    uint32 result = 1;
    uint64 reconnect_user_uid = 2;
    uint64 zone_unique = 3;
    int32 zonegroup_index = 4;
    int32 gameserver_index = 5;
    int32 gameserver_zonegroup_index = 6;
    uint32 cur_stage_index = 7;
    int32 client_connected_session_index = 8;
    string auth_key = 9;
    int32 account_grade = 10;
    int32 store_type = 11;
}

message WORLD_GAME_RECONNECT_USER_COMPLETE {
    uint64 reconnect_user_uid = 1;
}

message GATEWAY_WORLD_RECONNECT_USER_COMPLETE {
    uint64 reconnect_user_uid = 1;
}

message WORLD_LOBBY_LOGIN_ERROR {
    uint64 error_account_uid = 1;
    uint32 error_id = 2;
}

message LOBBY_WORLD_DELETE_CHARACTER {
    uint64 character_uid = 1;
    int64 delete_time = 2;
}

message LOBBY_WORLD_CHARACTER_DELETE_CANCEL {
    uint64 character_uid = 1;
}

message CLIENT_GAME_CHARACTER_FORCE_DATA {
    
}

message GAME_CLIENT_CHARACTER_FORCE_DATA {
    repeated _force_info force_info_list = 1;
    int32 slump_time = 2;
}

message CLIENT_GAME_CHARACTER_FORCE_BLOOD_DATA {
    
}

message GAME_CLIENT_CHARACTER_FORCE_BLOOD_DATA {
    repeated _force_blood_info force_blood_info_list = 1;
}

message CLIENT_GAME_CHARACTER_POTENTIAL_DATA {
    
}

message GAME_CLIENT_CHARACTER_POTENTIAL_DATA {
    repeated _potential_info potential_list = 1;
}

message CLIENT_GAME_CHARACTER_CUSTOM_TITLE_DATA {
    
}

message GAME_CLIENT_CHARACTER_CUSTOM_TITLE_DATA {
    string custom_title = 1;
    int64 custom_title_end_time = 2;
    bool is_custom_title_show = 3;
}

message CLIENT_GAME_CHARACTER_CUSTOMIZE_DATA {
    
}

message GAME_CLIENT_CHARACTER_CUSTOMIZE_DATA {
    repeated customize_info customize_list = 1;
}

message CLIENT_GAME_CHARACTER_QUICKSLOT_DATA {
    uint64 uid = 1;
}

message _quickslot_info {
    int32 slot_index = 1;
    int32 item_index = 2;
}

message GAME_CLIENT_CHARACTER_QUICKSLOT_DATA {
    repeated _quickslot_info slot_infos = 1;
}

message CLIENT_GAME_CHARACTER_MAKE_ITME_DATA {
    
}

message GAME_CLIENT_CHARACTER_MAKE_ITME_DATA {
    repeated uint32 make_item_list = 1;
}

message CLIENT_GAME_CHARACTER_ITME_COLLECTION_DATA {
    
}

message GAME_CLIENT_CHARACTER_ITME_COLLECTION_DATA {
    bool is_end = 1;
    repeated _item_collection_info collection_info_list = 2;
}

message CLIENT_GAME_CHARACTER_ITME_COLLECTION_COMPLATE_DATA {
    
}

message GAME_CLIENT_CHARACTER_ITME_COLLECTION_COMPLATE_DATA {
    bool is_end = 1;
    repeated int32 complate_collection_id_list = 2;
}

message CLIENT_GAME_CHARACTER_EQUIP_MAGIC_STONE_DATA {
    
}

message GAME_CLIENT_CHARACTER_EQUIP_MAGIC_STONE_DATA {
    repeated _character_equip_magic_stone_item list = 1;
}

message CLIENT_GAME_CHARACTER_EVENT_DATA {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_EVENT_DATA {
    repeated _character_event_data_info character_event_data_list = 1;
}

message CLIENT_GAME_CHARACTER_BATTLE_PASS_CLEAR_DATA {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_BATTLE_PASS_CLEAR_DATA {
    repeated _character_battle_pass_complete_info character_battle_pass_complete_list = 1;
    int32 order = 2;
    uint64 character_battle_pass = 3;
    uint64 mission_start_time = 4;
    uint64 mission_end_time = 5;
    uint64 character_battle_pass2 = 6;
    repeated _character_battle_pass_date character_battle_pass_date_list = 7;
}

message CLIENT_GAME_CHARACTER_BATTLE_PASS_REWARD_DATA {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_BATTLE_PASS_REWARD_DATA {
    repeated _character_battle_pass_reward_info character_battle_pass_reward_list = 1;
}

message CLIENT_GAME_CHARACTER_CASHBAG_DATA {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_CASHBAG_DATA {
    repeated _character_cashbag_info cashbag_info = 1;
    bool is_end = 2;
}

message CLIENT_GAME_COST_DATA {
    
}

message GAME_CLIENT_COST_DATA {
    repeated _cost_info user_cost_list = 1;
    repeated _time_ticket_info time_ticket_list = 2;
    repeated _cost_info guild_cost_list = 3;
}

message CLIENT_LOBBY_VOICE_DOWNLOAD_COMPLETE {
    uint64 account_uid = 1;
}

message CLIENT_GAME_CHARACTER_COMPOSE_POINT_DATA {
    
}

message GAME_CLIENT_CHARACTER_COMPOSE_POINT_DATA {
    repeated _compose_fail_data compose_fail_info = 1;
}

message CLIENT_GAME_CHARACTER_PERIOD_GOODS_DATA {
    
}

message GAME_CLIENT_CHARACTER_PERIOD_GOODS_DATA {
    repeated _period_goods_data period_goods_info = 1;
}

message GATEWAY_WORLD_AUTH {
    string auth_key = 1;
    uint64 account_uid = 2;
    string account_id = 3;
    uint32 proxy_server_index = 4;
    uint32 proxy_connected_session_id = 5;
    string user_ip = 6;
}

message WORLD_GATEWAY_AUTH {
    bool auth_result = 1;
    uint64 account_uid = 2;
    string account_id = 3;
    uint32 proxy_server_index = 4;
    uint32 proxy_connected_session_id = 5;
    string user_ip = 6;
}

message CLIENT_GAME_DATA_SEQUENTIAL_PACKET {
    
}

message CLIENT_GAME_DATA_LOGIN_PARALLEL_PACKET {
    
}

message GATEWAY_CLIENT_UNCHEATER_COOKIE {
    bytes cookie = 1;
}

message CLIENT_GATEWAY_UNCHEATER_RESPONSE {
    bytes cookie = 1;
}

message CLIENT_GAME_CHARACTER_EVENT_PASS_DATA {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_EVENT_PASS_DATA {
    repeated _character_event_pass_data_info character_event_pass_data_list = 1;
}

message CLIENT_GAME_CHARACTER_EVENT_PASS_MISSION_CLEAR_DATA {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_EVENT_PASS_MISSION_CLEAR_DATA {
    repeated _character_event_pass_mission_complete_info character_event_pass_complete_list = 1;
    int32 order = 2;
    uint64 character_event_pass = 3;
    uint64 mission_start_time = 4;
    uint64 mission_end_time = 5;
    uint64 character_event_pass2 = 6;
    repeated _character_event_pass_date character_event_pass_date_list = 7;
}

message CLIENT_GAME_CHARACTER_EVENT_PASS_REWARD_DATA {
    uint64 uid = 1;
}

message GAME_CLIENT_CHARACTER_EVENT_PASS_REWARD_DATA {
    repeated _character_event_pass_reward_info character_event_pass_reward_list = 1;
}
